--- a/propagate.kv
+++ b/propagate.kv
@@ -1,6 +1,6 @@
 #:kivy 1.1.0
 #:import Win kivy.core.window.Window
-
+#: import FileBrowser kivy.garden.filebrowser
 <MainWidget>:
     BoxLayout:
         size: Win.size
@@ -81,20 +81,10 @@
         size: root.size
         pos: root.pos
         orientation: "vertical"
-
-        FileChooserIconView:
-            id: filechooser
-
-        BoxLayout:
-            size_hint_y: None
-            height: 30
-            Button:
-                text: "Cancel"
-                on_release: root.cancel()
-
-            Button:
-                text: "Load"
-                on_release: root.load(filechooser.path, filechooser.selection)
+		FileBrowser:
+			select_string: 'Select'
+			on_submit: root.load(self.selection[0])
+			on_canceled: root.cancel()
 
 <PopupBox>:
     id: loading_popup
